# luping

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  ScreenRecorder.rc  findings.md  progress.md  task_plan.md
.claude/: settings.local.json
app/: AppWindow.cpp  AppWindow.h  HotkeyManager.cpp  HotkeyManager.h  main.cpp
audio/: AudioCaptureWasapi.cpp  AudioCaptureWasapi.h  AudioEncoder.cpp  AudioEncoder.h  AudioMixer.cpp  AudioMixer.h
capture/: DesktopDuplicationSource.cpp  DesktopDuplicationSource.h  FrameSaver.cpp  FrameSaver.h  GameCaptureSource.cpp  GameCaptureSource.h  GameWindowEnumerator.cpp  GameWindowEnumerator.h  MonitorEnumerator.cpp  MonitorEnumerator.h
cmake/: FindFFmpeg.cmake
core/: AppSettings.cpp  AppSettings.h  RecorderController.cpp  RecorderController.h  RecordingConfig.h  RecordingState.h
docs/: beta-test-guide.md  bug-report-template.md  game-capture-design.md  known-limitations.md  release-checklist.md  security-notes.md  ui-test-checklist-zh.md
encoder/: FFmpegEncoder.cpp  FFmpegEncoder.h  IVideoEncoder.h
installer/: ScreenRecorder.iss
platform/: D3D11Device.cpp  D3D11Device.h  ErrorCode.h  Logger.cpp  Logger.h
scripts/: audio_regression_check.ps1  build_installer.ps1  check_captures.ps1  check_dist.ps1  check_release.ps1  debug_test.ps1  find_easy.ps1  find_sr.ps1  find_win.ps1  find_window.ps1  find_window2.ps1  findwin_test.ps1  generate_icons.py  make_zip_release.ps1  package_release.ps1  quick_debug.ps1  release_qa.ps1  run_test.ps1  tail_logs.ps1  test_e4_startstop.ps1
ui/: BackgroundRenderer.cpp  BackgroundRenderer.h
